load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "16117_i_have_few_friends_small",
    hdrs = ["16117_i_have_few_friends_small.h"],
    visibility = ["//16000/tests:__pkg__"],
)

cc_library(
    name = "16497_book_borrowing_request",
    hdrs = ["16497_book_borrowing_request.h"],
    visibility = ["//16000/tests:__pkg__"],
)

cc_library(
    name = "16546_missing_runners",
    hdrs = ["16546_missing_runners.h"],
    visibility = ["//16000/tests:__pkg__"],
)


cc_library(
    name = "16944_safe_password",
    hdrs = ["16944_safe_password.h"],
    visibility = ["//16000/tests:__pkg__"],
)