load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "16117_i_have_few_friends_small_test",
    srcs = ["16117_i_have_few_friends_small_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//16000/src:16117_i_have_few_friends_small",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "16497_book_borrowing_request_test",
    srcs = ["16497_book_borrowing_request_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//16000/src:16497_book_borrowing_request",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "16546_missing_runners_test",
    srcs = ["16546_missing_runners_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//16000/src:16546_missing_runners",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "16944_safe_password_test",
    srcs = ["16944_safe_password_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//16000/src:16944_safe_password",
        "@googletest//:gtest_main",
    ],
)