load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "17224_why_did_apc_become_subtask_competition",
    hdrs = ["17224_why_did_apc_become_subtask_competition.h"],
    visibility = ["//17000/tests:__pkg__"],
)

cc_library(
    name = "17283_i_am_groot",
    hdrs = ["17283_i_am_groot.h"],
    visibility = ["//17000/tests:__pkg__"],
)

cc_library(
    name = "17286_yumi",
    hdrs = ["17286_yumi.h"],
    visibility = ["//17000/tests:__pkg__"],
)

cc_library(
    name = "17356_wook_jae",
    hdrs = ["17356_wook_jae.h"],
    visibility = ["//17000/tests:__pkg__"],
)

cc_library(
    name = "17427_sum_of_divisors_2",
    hdrs = ["17427_sum_of_divisors_2.h"],
    visibility = ["//17000/tests:__pkg__"],
)

cc_library(
    name = "17608_bar",
    hdrs = ["17608_bar.h"],
    visibility = ["//17000/tests:__pkg__"],
)
