
load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "17094_serious_problem_test",
    srcs = ["17094_serious_problem_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17094_serious_problem",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17224_why_did_apc_become_subtask_competition_test",
    srcs = ["17224_why_did_apc_become_subtask_competition_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17224_why_did_apc_become_subtask_competition",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17283_i_am_groot_test",
    srcs = ["17283_i_am_groot_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17283_i_am_groot",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17286_yumi_test",
    srcs = ["17286_yumi_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17286_yumi",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17356_wook_jae_test",
    srcs = ["17356_wook_jae_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17356_wook_jae",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17427_sum_of_divisors_2_test",
    srcs = ["17427_sum_of_divisors_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17427_sum_of_divisors_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "17608_bar_test",
    srcs = ["17608_bar_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//17000/src:17608_bar",
        "@googletest//:gtest_main",
    ],
)
