load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "18258_queue2",
    hdrs = ["18258_queue2.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18411_exam",
    hdrs = ["18411_exam.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18883_print_n_m",
    hdrs = ["18883_print_n_m.h"],
    visibility = ["//18000/tests:__pkg__"],
)
