load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "18258_queue2",
    hdrs = ["18258_queue2.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18408_three_integers",
    hdrs = ["18408_three_integers.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18409_counting_vowels",
    hdrs = ["18409_counting_vowels.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18411_exam",
    hdrs = ["18411_exam.h"],
    visibility = ["//18000/tests:__pkg__"],
)

cc_library(
    name = "18883_print_n_m",
    hdrs = ["18883_print_n_m.h"],
    visibility = ["//18000/tests:__pkg__"],
)
