load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "18258_queue2_test",
    srcs = ["18258_queue2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18258_queue2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18411_exam_test",
    srcs = ["18411_exam_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18411_exam",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18883_print_n_m_test",
    srcs = ["18883_print_n_m_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18883_print_n_m",
        "@googletest//:gtest_main",
    ],
)
