load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "18258_queue2_test",
    srcs = ["18258_queue2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18258_queue2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18408_three_integers_test",
    srcs = ["18408_three_integers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18408_three_integers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18409_counting_vowels_test",
    srcs = ["18409_counting_vowels_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18409_counting_vowels",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18411_exam_test",
    srcs = ["18411_exam_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18411_exam",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18414_the_nearest_value_test",
    srcs = ["18414_the_nearest_value_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18414_the_nearest_value",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18870_coordinate_compression_test",
    srcs = ["18870_coordinate_compression_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18870_coordinate_compression",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18883_print_n_m_test",
    srcs = ["18883_print_n_m_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//18000/src:18883_print_n_m",
        "@googletest//:gtest_main",
    ],
)
