load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "18127_model_crystal_test",
    srcs = ["18127_model_crystal_test.cc"],
    deps = [
        "//18000/src:18127_model_crystal",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18258_queue2_test",
    srcs = ["18258_queue2_test.cc"],
    deps = [
        "//18000/src:18258_queue2",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18408_three_integers_test",
    srcs = ["18408_three_integers_test.cc"],
    deps = [
        "//18000/src:18408_three_integers",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18409_counting_vowels_test",
    srcs = ["18409_counting_vowels_test.cc"],
    deps = [
        "//18000/src:18409_counting_vowels",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18411_exam_test",
    srcs = ["18411_exam_test.cc"],
    deps = [
        "//18000/src:18411_exam",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18414_the_nearest_value_test",
    srcs = ["18414_the_nearest_value_test.cc"],
    deps = [
        "//18000/src:18414_the_nearest_value",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18870_coordinate_compression_test",
    srcs = ["18870_coordinate_compression_test.cc"],
    deps = [
        "//18000/src:18870_coordinate_compression",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "18883_print_n_m_test",
    srcs = ["18883_print_n_m_test.cc"],
    deps = [
        "//18000/src:18883_print_n_m",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)
