load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "19602_dog_treats",
    hdrs = ["19602_dog_treats.h"],
    visibility = ["//19000/tests:__pkg__"],
)

cc_library(
    name = "19637_please_write_if_instead",
    hdrs = ["19637_please_write_if_instead.h"],
    visibility = ["//19000/tests:__pkg__"],
)

cc_library(
    name = "19944_what_is_standard_of_newbie",
    hdrs = ["19944_what_is_standard_of_newbie.h"],
    visibility = ["//19000/tests:__pkg__"],
)
