load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "19602_dog_treats_test",
    srcs = ["19602_dog_treats_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//19000/src:19602_dog_treats",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "19637_please_write_if_instead_test",
    srcs = ["19637_please_write_if_instead_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//19000/src:19637_please_write_if_instead",
        "@googletest//:gtest_main",
    ],
)
