load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "2108_statistics",
    hdrs = ["2108_statistics.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2438_get_a_star_1",
    hdrs = ["2438_get_a_star_1.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2501_divisors",
    hdrs = ["2501_divisors.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2745_base_conversion",
    hdrs = ["2745_base_conversion.h"],
    visibility = ["//2000/tests:__pkg__"],
)
