load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "2090_harmonic_mean",
    hdrs = ["2090_harmonic_mean.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2108_statistics",
    hdrs = ["2108_statistics.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2161_card1",
    hdrs = ["2161_card1.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2164_card2",
    hdrs = ["2164_card2.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2217_rope",
    hdrs = ["2217_rope.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2355_sigma",
    hdrs = ["2355_sigma.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2438_get_a_star_1",
    hdrs = ["2438_get_a_star_1.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2501_divisors",
    hdrs = ["2501_divisors.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2557_hello_world",
    hdrs = ["2557_hello_world.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2562_maximum_value",
    hdrs = ["2562_maximum_value.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2563_confetti",
    hdrs = ["2563_confetti.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2566_maximum_value",
    hdrs = ["2566_maximum_value.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2741_print_n",
    hdrs = ["2741_print_n.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2743_check_word_length",
    hdrs = ["2743_check_word_length.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2745_base_conversion",
    hdrs = ["2745_base_conversion.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2903_planina",
    hdrs = ["2903_planina.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2960_sieve_of_eratosthenes",
    hdrs = ["2960_sieve_of_eratosthenes.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2981_inspection",
    hdrs = ["2981_inspection.h"],
    visibility = ["//2000/tests:__pkg__"],
)
