load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "2090_harmonic_mean",
    hdrs = ["2090_harmonic_mean.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2108_statistics",
    hdrs = ["2108_statistics.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2156_wine_tasting",
    hdrs = ["2156_wine_tasting.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2161_card1",
    hdrs = ["2161_card1.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2164_card2",
    hdrs = ["2164_card2.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2178_search_maze",
    hdrs = ["2178_search_maze.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2193_2_friendly_numbers",
    hdrs = ["2193_2_friendly_numbers.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2217_rope",
    hdrs = ["2217_rope.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2352_design_semiconductors",
    hdrs = ["2352_design_semiconductors.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2355_sigma",
    hdrs = ["2355_sigma.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2438_get_a_star_1",
    hdrs = ["2438_get_a_star_1.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2439_print_stars_2",
    hdrs = ["2439_print_stars_2.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2440_print_stars_3",
    hdrs = ["2440_print_stars_3.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2445_print_stars_8",
    hdrs = ["2445_print_stars_8.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2468_safe_area",
    hdrs = ["2468_safe_area.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2501_divisors",
    hdrs = ["2501_divisors.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2557_hello_world",
    hdrs = ["2557_hello_world.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2562_maximum_value",
    hdrs = ["2562_maximum_value.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2563_confetti",
    hdrs = ["2563_confetti.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2566_maximum_value",
    hdrs = ["2566_maximum_value.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2579_stair_climbing",
    hdrs = ["2579_stair_climbing.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2606_virus",
    hdrs = ["2606_virus.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2667_stick_number",
    hdrs = ["2667_stick_number.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2675_string_repeatation",
    hdrs = ["2675_string_repeatation.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2741_print_n",
    hdrs = ["2741_print_n.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2742_print_n",
    hdrs = ["2742_print_n.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2743_check_word_length",
    hdrs = ["2743_check_word_length.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2744_change_letter_case",
    hdrs = ["2744_change_letter_case.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2745_base_conversion",
    hdrs = ["2745_base_conversion.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2750_sort_numbers",
    hdrs = ["2750_sort_numbers.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2752_three_number_sorting",
    hdrs = ["2752_three_number_sorting.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2754_calculate_score",
    hdrs = ["2754_calculate_score.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2903_planina",
    hdrs = ["2903_planina.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2960_sieve_of_eratosthenes",
    hdrs = ["2960_sieve_of_eratosthenes.h"],
    visibility = ["//2000/tests:__pkg__"],
)

cc_library(
    name = "2981_inspection",
    hdrs = ["2981_inspection.h"],
    visibility = ["//2000/tests:__pkg__"],
)
