load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "2090_harmonic_mean_test",
    srcs = ["2090_harmonic_mean_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2090_harmonic_mean",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2108_statistics_test",
    srcs = ["2108_statistics_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2108_statistics",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2156_wine_tasting_test",
    srcs = ["2156_wine_tasting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2156_wine_tasting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2161_card1_test",
    srcs = ["2161_card1_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2161_card1",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2164_card2_test",
    srcs = ["2164_card2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2164_card2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2178_search_maze_test",
    srcs = ["2178_search_maze_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2178_search_maze",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2217_rope_test",
    srcs = ["2217_rope_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2217_rope",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2355_sigma_test",
    srcs = ["2355_sigma_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2355_sigma",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2438_get_a_star_1_test",
    srcs = ["2438_get_a_star_1_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2438_get_a_star_1",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2439_print_stars_2_test",
    srcs = ["2439_print_stars_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2439_print_stars_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2440_print_stars_3_test",
    srcs = ["2440_print_stars_3_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2440_print_stars_3",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2501_divisors_test",
    srcs = ["2501_divisors_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2501_divisors",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2557_hello_world_test",
    srcs = ["2557_hello_world_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2557_hello_world",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2562_maximum_value_test",
    srcs = ["2562_maximum_value_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2562_maximum_value",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2563_confetti_test",
    srcs = ["2563_confetti_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2563_confetti",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2566_maximum_value_test",
    srcs = ["2566_maximum_value_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2566_maximum_value",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2579_stair_climbing_test",
    srcs = ["2579_stair_climbing_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2579_stair_climbing",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2606_virus_test",
    srcs = ["2606_virus_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2606_virus",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2667_stick_number_test",
    srcs = ["2667_stick_number_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2667_stick_number",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2675_string_repeatation_test",
    srcs = ["2675_string_repeatation_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2675_string_repeatation",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2741_print_n_test",
    srcs = ["2741_print_n_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2741_print_n",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2743_check_word_length_test",
    srcs = ["2743_check_word_length_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2743_check_word_length",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2744_change_letter_case_test",
    srcs = ["2744_change_letter_case_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2744_change_letter_case",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2745_base_conversion_test",
    srcs = ["2745_base_conversion_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2745_base_conversion",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2752_three_number_sorting_test",
    srcs = ["2752_three_number_sorting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2752_three_number_sorting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2754_calculate_score_test",
    srcs = ["2754_calculate_score_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2754_calculate_score",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2903_planina_test",
    srcs = ["2903_planina_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2903_planina",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2960_sieve_of_eratosthenes_test",
    srcs = ["2960_sieve_of_eratosthenes_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2960_sieve_of_eratosthenes",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "2981_inspection_test",
    srcs = ["2981_inspection_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//2000/src:2981_inspection",
        "@googletest//:gtest_main",
    ],
)
